# sfml-game-engine

./: .gitignore  CMakeLists.txt  Game_ideas.txt  README.md
Documentation/: Lore.md  wtf is markdown.md
cmake_modules/: FindSFML.cmake
include/: Chunk.h  ChunkHandler.h  ChunkQueue.h  Engine.h  EngineDefines.h  Entity.h  Map.h  MapRender.h  Player.h  SnakeSection.h  TileMap.h
src/: Chunk.cpp  ChunkHandler.cpp  ChunkQueue.cpp  Engine.cpp  Entity.cpp  Map.cpp  MapRender.cpp  Player.cpp  SnakeSection.cpp  TileMap.cpp  main.cpp
